# IOTServer

./: README.md  chinh.pem  pyproject.toml  tranthang2404.pem
demo/: .env
demo/api/: urls.py
demo/api/serializers/: serializers.py
demo/api/views/: views.py
demo/demo/: __init__.py  celery.py  mqtt.py  urls.py
demo/demo/settings/: defaults.py
demo/smart_home/: admin.py  apps.py  models.py  tasks.py
demo/smart_home/migrations/: 0001_initial.py  0002_auto_20210530_1022.py  0003_auto_20210614_1750.py  0004_auto_20210706_1006.py  0005_delete_user.py  0006_auto_20210712_1036.py  0007_remove_device_home.py  0008_alter_esp_home.py
